[gd_scene load_steps=9 format=2]

[ext_resource path="res://tile3.png" type="Texture" id=1]
[ext_resource path="res://ARLRDBD.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://particle.png" type="Texture" id=3]
[ext_resource path="res://Tile.gd" type="Script" id=4]
[ext_resource path="res://tile3pressed.png" type="Texture" id=5]
[ext_resource path="res://SFX/button_press.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
angular_velocity = 720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 250.0
scale = 2.0
scale_random = 1.0
color = Color( 0.392157, 0.607843, 1, 1 )
hue_variation = 1.0
hue_variation_random = 0.05

[node name="Tile" type="Control"]
rect_min_size = Vector2( 136, 136 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 4 )

[node name="Back" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position" type="Label" parent="Back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "A1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Front" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="Front"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "500"
align = 1
valign = 1

[node name="ParticlePop" type="Particles2D" parent="."]
position = Vector2( 68, 68 )
emitting = false
amount = 25
one_shot = true
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
